fix toast and removed toast on ios final production

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -28,8 +28,6 @@
     .toast-wrapper {
          color:color($colors, light) !important; 
          background: color($colors, dark);
-         border-radius: 30px; 
-         padding: 5px;
     }
     .toast-message{
         white-space: pre-line;
